@@ -1,3 +1,7 @@
+2005-02-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit2.c (main): fix small leak.
+
 2005-02-21  Paolo Borelli  <pborelli@katamail.com>
 
 	* GNOME_Gedit.idl:
